Target Explorer: Fix FindBugs warnings